--- a/login/templates/new_user.html
+++ b/login/templates/new_user.html
@@ -1,3 +1,33 @@
+{% extends "base.html" %}
+{% block content %}
+<br />
+<br />
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-3 jumbotron text-center">
+            <h1 class="display-4">Create Your SportsFeed Account</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4 offset-4 text-center form-div rounded">
+            <form action='/login/new/submit/' method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button class="btn btn-lg btn-primary btn-block purple-button" id="new_user_submit_button"
+                    type="submit">
+                    Create Account
+                </button>
+            </form>
+
+        </div>
+
+    </div>
+</div>
+{% endblock %}
+
+<!--
+<!DOCTYPE html>
+<html lang="en">
 <html>
     <head>
         {% load static %}
@@ -68,3 +98,4 @@
         </div>
    </body>
 </html>
+-->
