--- a/preferences/templates/user_preferences.html
+++ b/preferences/templates/user_preferences.html
@@ -1,3 +1,18 @@
-<html>
-    <title>preferences</title>
-</html>
+{% extends "base.html" %}
+{% block content %}
+
+<title>login</title>
+<br/>
+<br/>
+<form action='/user-preferences/{{ user_id }}/' method="POST">
+    {% csrf_token %}
+	    {% for form in forms %}
+            {{ form.as_p }}
+        {% endfor %} 
+    <p>{{ hot_sauce }}</p>
+    <input id="preferences_submit_button" type="submit" value="Submit" />
+</form>
+
+{% endblock %}
+
+
