--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -7,8 +7,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}{% endblock %}</title> 
-        <link rel="stylesheet" href="{% static 'login/bootstrap/css/bootstrap.min.css'%}"> 
-        <link rel="stylesheet" type="text/css" href="{% static 'login/style.css' %}"/>
+        <link rel="stylesheet" href="{% static 'home/bootstrap/css/bootstrap.min.css'%}"> 
+        <link rel="stylesheet" type="text/css" href="{% static 'home/style.css' %}"/>
     </head>
     <body class="grey-background">
         <div id="content">
